--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = ">=3.8.1, <3.13"
 atproto = {git = "https://github.com/FujitsuResearch/atproto-python.git"}
 langchain-openai = "^0.0.8"
+langchain-anthropic = "^0.1.4"
 openai = "^1.13.3"
 numpy = [
     {version = ">=1.26", python = ">=3.9"},
